# try-qdrant-db

./: .gitignore  Cargo.toml  DockerfileClient  DockerfileQdrant  README.md  docker-compose.yml  justfile
src/: main.rs
