[package]
name = "db_client"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
clap = { version = "4.5.11", features = ["derive"] }
qdrant-client = "1.10.2"
tokio = { version = "1.39.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
